--- a/.github/workflows/mlops-pipeline.yml
+++ b/.github/workflows/mlops-pipeline.yml
@@ -10,7 +10,8 @@ jobs:
   code-quality:
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v3
+    - name: Checkout code
+      uses: actions/checkout@v4
     
     - name: Set up Python
       uses: actions/setup-python@v4
@@ -19,14 +20,14 @@ jobs:
         
     - name: Install dependencies
       run: |
+        pip install --upgrade pip
         pip install -r scripts/requirements.txt
         pip install mlflow
         
     - name: Test Python scripts
       run: |
         python -c "print('Testing imports...')"
-        python -c "import sklearn; import pandas; import mlflow; 
-print('All dependencies working!')"
+        python -c "import sklearn, pandas, mlflow; print('All dependencies working!')"
         
     - name: CI/CD Validation
       run: echo "GitHub Actions CI/CD pipeline successfully validated!"
